crates/cli/tests/snapshots/snapshot_tests__codeclimate_output.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-file",
    "description": "File is not reachable from any entry point",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "c4d5d570389b6321",
    "location": {
      "path": "src/dead.ts",
      "lines": {
        "begin": 1
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-export",
    "description": "Export 'helperFn' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "1d25c1dfe1837da4",
    "location": {
      "path": "src/utils.ts",
      "lines": {
        "begin": 10
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-type",
    "description": "Type export 'OldType' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "70129604df6adaf0",
    "location": {
      "path": "src/types.ts",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-dependency",
    "description": "Package 'lodash' is in dependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "565a703b90e29ab5",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-dev-dependency",
    "description": "Package 'jest' is in devDependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "0a6f69176391810d",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-optional-dependency",
    "description": "Package 'fsevents' is in optionalDependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "5c890a87a0ad36a9",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/type-only-dependency",
    "description": "Package 'zod' is only imported via type-only imports (consider moving to devDependencies)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "ce7c5c861453f2d2",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 8
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-enum-member",
    "description": "Enum member 'Status.Deprecated' is never referenced",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "a2666411f17dc9d4",
    "location": {
      "path": "src/enums.ts",
      "lines": {
        "begin": 8
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-class-member",
    "description": "Class member 'UserService.legacyMethod' is never referenced",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "2ca79023e7a41930",
    "location": {
      "path": "src/service.ts",
      "lines": {
        "begin": 42
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unresolved-import",
    "description": "Import './missing-module' could not be resolved",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "58fddadd09f5631f",
    "location": {
      "path": "src/app.ts",
      "lines": {
        "begin": 3
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unlisted-dependency",
    "description": "Package 'chalk' is imported but not listed in package.json",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "ec112dff06d36cce",
    "location": {
      "path": "src/cli.ts",
      "lines": {
        "begin": 2
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/duplicate-export",
    "description": "Export 'Config' appears in multiple modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "059e550191b06ac6",
    "location": {
      "path": "src/config.ts",
      "lines": {
        "begin": 15
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/duplicate-export",
    "description": "Export 'Config' appears in multiple modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "298ba9d90b56a182",
    "location": {
      "path": "src/types.ts",
      "lines": {
        "begin": 30
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/circular-dependency",
    "description": "Circular dependency: src/a.ts → src/b.ts",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "9c9054f3055939fb",
    "location": {
      "path": "src/a.ts",
      "lines": {
        "begin": 3
      }
    }
  }
]
