crates/cli/tests/snapshots/snapshot_tests__codeclimate_re_export_variant.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-export",
    "description": "Re-export 'reExported' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "855fead6db8e0871",
    "location": {
      "path": "src/index.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
