crates/cli/tests/snapshots/snapshot_tests__codeclimate_unresolved_imports_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unresolved-import",
    "description": "Import './missing' could not be resolved",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "202fe99ed82ba9cd",
    "location": {
      "path": "src/index.ts",
      "lines": {
        "begin": 3
      }
    }
  }
]
