crates/cli/tests/snapshots/snapshot_tests__codeclimate_unused_class_members_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-class-member",
    "description": "Class member 'UserService.legacyMethod' is never referenced",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "2ca79023e7a41930",
    "location": {
      "path": "src/service.ts",
      "lines": {
        "begin": 42
      }
    }
  }
]
