crates/cli/tests/snapshots/snapshot_tests__codeclimate_unused_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-dependency",
    "description": "Package 'lodash' is in dependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "565a703b90e29ab5",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  }
]
